[package]
name = "mygithubstatus"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }
reqwest = { version = "0.10.1", features = ["json"] }
serde = "1.0.104"
serde_json = "1.0.47"
structopt = "0.3"
thiserror = "1.0.10"
serde_derive = "1.0.104"
futures = "0.3.4"
async-stream = "0.2.1"
tokio = { version = "0.2.11", features = ["rt-threaded", "macros", "time"] }
urlencoding = "1.0.0"
github_v3 = "0.3.2"
log = "0.4"
simple_logger = "1.9.0"

